test/files/neg/macro-invalidsig-tparams-badtype/Impls_1.scala
import scala.reflect.makro.{Context => Ctx}

object Impls {
  def foo[U](c: Ctx)(U: c.universe.Type) = ???
}
